Improved article activity (photos, dates, layout), added a Toolbar fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="all">all</string>
     <string name="favourite">favourite</string>
     <string name="placeholder">Placeholder</string>
+    <string name="date_format">%1$s, %2$s</string>
+    <string name="published">Published: %1$s, %2$s</string>
+    <string name="updated">Updated: %1$s, %2$s</string>
+    <string name="illustration_image">Illustration image</string>
 </resources>
