Added communication between fragments (EventBus), improved layout, improved design of code, fixed minor problems

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,11 @@
     <string name="app_info_message">© 2021 Paweł Cegieła\n\n
         * Faculty of Information and Communication Technology\n
         * Wrocław University of Science and Technology\n\n
-        * Icon of the app (the rocket) made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>\n\n
+        * Icon of the app (the rocket) is made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>\n\n
+        * Star is made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel Perfect">Pixel Perfect</a>  from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>\n\n
         * Main font used in the app is Rubik\n\n
         * Font in logo is AstroSpace from FontSpace\n\n
-        * Background was made by Raphael Nogueira from Unsplash.com</string>
+        * Background is made by Raphael Nogueira from Unsplash.com</string>
     <string name="ok">OK</string>
     <string name="all">all</string>
     <string name="favourite">favourite</string>
